[package]
name = "RustLearning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
rand = "0.8.4"

